fix(deps): update dependencies for PostgreSQL 16.11 compatibility
- Upgraded Flyway to 11.7.2
- Updated PostgreSQL JDBC driver to 42.7.8
- Bumped Lombok to 1.18.42
- Upgraded MapStruct to 1.6.3
- Updated SpringDoc OpenAPI to 2.8.9
- Fixed Java version target to 17 to match runtime